creating myboutique-front and adding node docker container by updating docker-compose.yaml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,4 +56,15 @@ services:
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-        
+    
+    node:
+           
+        build:
+            context:  myboutique-front/
+            dockerfile: Dockerfile
+        volumes:
+            - './myboutique-front:/app'
+            - '/app/node_modules'
+        ports:
+            - '4200:4200'
+                
